--- a/cv.html
+++ b/cv.html
@@ -184,7 +184,7 @@ sup {
 
 <p>Here are some projects I've done, you can click the title if the app is still available on App Store .</p>
 
-<p><em>If it's has * prefix, it means I made it in parttime.</em></p>
+<p><em>If it's has * prefix, it means I made it in part-time.</em></p>
 
 <p><strong> Bindo Devices </strong></p>
 
@@ -226,19 +226,9 @@ sup {
 <pre><code>Taobao.com is the largest C2C marketing site in China. I'm currently a member of the wireless team that building the mobile client of Taobao.com. I'm working on a instant messaging moudle called wangwang and feed feature called weitao of it's iPhone client. I also do some improvement works of the SDK in business layer of this client.
 </code></pre>
 
-<p><strong> * Deal Push </strong></p>
+<p><a href="http://slyfairy.com/"><strong>* Deal Push</strong></a></p>
 
-<pre><code>The feature is crawling (clawler is written by Node.js) 20 active websites(like http://www.dealmoon.com/) that post discount or sales deals, then save the contents and links to redis store if that deals contains keywords I've added. It has a web front end for adding keywords, browsing saved deals, it also has iPhone client so that the backend server could push the deal to iPhone client via APNS. My lovely girl firend often go to some web sites to read that deals, I think it's wasting time, so I did this, and I love it now because it save our time and money. Sorry, it's a private site...... OK I tell you, it's slyfairy.com, username: friend, password: myfriend.
-</code></pre>
-
-<p><strong> * Paste Push </strong></p>
-
-<pre><code>Just push text from website(or Chrome extension) to iPhone client, I did it because iOS 7 has a new feature of background refresh when received remote push notification. So it's convenient that when received notification then put the info to Pasteboard automatically.
-</code></pre>
-
-<p><strong> * KLMessager</strong></p>
-
-<pre><code>An instant messager demo built with Socket.IO, It has web front end and iPhone client. Try it at slyfairy.com:9000, and the username must be levey or karin :)
+<pre><code>The feature is crawling (clawler is written by Node.js) 20 active websites(like http://www.dealmoon.com/) that post discount or sales deals, then save the contents and links to redis store if that deals contains keywords I've added. It has a web front end for adding keywords, browsing saved deals, it also has iPhone client so that the backend server could push the deal to iPhone client via APNS. My lovely girl firend often go to some web sites to read that deals, I think it's wasting time, so I did this, test acccount: friend, password: myfriend.
 </code></pre>
 
 <p><a href="https://itunes.apple.com/us/app/chong-wu-yi-sheng/id716301555?mt=8"><strong>* Pet Doctor</strong></a></p>
@@ -264,22 +254,7 @@ An iOS 、OS X development forum, hosting on Heroku, little and clean, build wit
 
 <p><strong>XiangGe</strong></p>
 
-<pre><code>An app to merge photoes, user can select several photos to make it to be one. then shake the phone to reorder the photoes, some nice frames are also supported! and share it to Tencent MicroBlog, Sina MicroBlog and Renren. 
-</code></pre>
-
-<p><strong>Shange</strong></p>
-
-<pre><code>English version of "XiangGe", just changed the sharing methods, it support sharing to Facebook, Twitter, Tumblr.
-</code></pre>
-
-<p><strong>PhoneWork</strong></p>
-
-<pre><code>Tiny app, match the iPhone model automatically, change the background image,and user can download more background images, at last, make the order of the back's image, send it to server, and the user will received a back case with chosen image.
-</code></pre>
-
-<p><strong>PINKE</strong></p>
-
-<pre><code>A project for Zhejiang Online，a client like koubei.com, lifestyle category app.
+<pre><code>An app to merge photoes, user can select several photos to make it to be one. then shake the phone to reorder the photoes, some nice frames are also supported! and share it to Facebook, Twitter, Tumblr, Tencent MicroBlog, Sina MicroBlog and Renren. 
 </code></pre>
 
 <p><a href="http://itunes.apple.com/cn/app/id400852752?mt=8"><strong>Hangzhou Daily</strong></a></p>
@@ -294,22 +269,7 @@ An iOS 、OS X development forum, hosting on Heroku, little and clean, build wit
 
 <p><strong>Power GIS</strong></p>
 
-<pre><code>An iPad GIS client，the features are searching electric devices in a city, and displaying the results on MapView. the devices' details is stored in SQLite database file. This app looks very beatiful. I like pragmatic and elegance designs from I starting iOS development.
-</code></pre>
-
-<p><strong>Taizhou Unicom</strong></p>
-
-<pre><code>A project of Taizhou Unicom, So many views, but it's not difficult when I designed some base views.
-</code></pre>
-
-<p><strong>HaagenDazs Order</strong></p>
-
-<pre><code>An order app for HaagenDazs(demo)，it's developed for the waiters to place orders easier, they can use it to scan the QR-Code on the menu to chose dishs, then send the order to server, and the server will send the order to POS system.
-</code></pre>
-
-<p><strong>Bluetooth RPS</strong></p>
-
-<pre><code>When I started to learn iOS developement, I made this tiny game. Shake the iPhone, the screent will display the hand sign of Rock, Paper, Scissors, and send the result to another iPhone via bluetooth, then evaluate who is the winer.
+<pre><code>An iPad GIS client，the features are searching electric devices in a city, and displaying the results on MapView. the devices' details is stored in SQLite database file. This app looks very fancy. I like pragmatic and elegance designs from I starting iOS development.
 </code></pre>
 
 <p>……</p>
@@ -328,12 +288,10 @@ An iOS 、OS X development forum, hosting on Heroku, little and clean, build wit
 
 <h3>Contact Me</h3>
 
-<p>If you are interested about me, you can contact me in the ways shown below.</p>
-
 <p><strong>M(CN)</strong>. +86 18667121397</p>
 
-<p><strong>M(US)</strong>. +1 (917)302-2403</p>
+<p><strong>M(US)</strong>. +1 (917) 302-2403</p>
 
-<p><strong>Email</strong>. <a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#x6f;&#58;&#108;&#x65;&#118;&#101;&#x79;&#x2e;&#122;&#104;&#117;&#x40;&#x67;&#109;&#x61;&#x69;&#x6c;&#x2e;&#99;&#111;&#109;">&#108;&#101;&#x76;&#x65;&#x79;&#46;&#122;&#104;&#117;&#64;&#x67;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#x6d;</a></p>
+<p><strong>Email</strong>. <a href="&#x6d;&#x61;&#105;&#108;&#116;&#111;&#58;&#108;&#101;&#118;&#x65;&#x79;&#46;&#x7a;&#104;&#x75;&#x40;&#x67;&#x6d;&#x61;&#x69;&#108;&#x2e;&#99;&#111;&#x6d;">&#108;&#101;&#118;&#101;&#121;&#x2e;&#122;&#104;&#117;&#64;&#103;&#109;&#97;&#105;&#108;&#x2e;&#99;&#111;&#x6d;</a></p>
 </body>
 </html>
